# issue-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cargo-issue/: Cargo.toml
cargo-issue/src/: main.rs  tests.rs
issue/: Cargo.toml
issue/src/: lib.rs
lib/: Cargo.toml
lib/src/: config.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
tests/: Cargo.toml  test.rs
tests/ui/: github_active_issue.rs  github_closed_issue.rs  github_closed_issue.stderr  github_issue_not_found.rs  github_issue_not_found.stderr
