[package]
name = "issue"
version = "0.1.2"
edition = "2018"
categories = ["development-tools", "development-tools::build-utils"]
keywords = ["issue", "issue-tracking", "github", "gitlab"]
readme  = "../README.md"
repository = "https://github.com/kaiserkarel/issue"
license-file = "../LICENSE"
description = "Tracks open issues during compile time and emits warnings if issues are closed"

[dependencies]
macros = { package = "issue-macros", version = "0.1.1", path = "../macros" }
lib = { path = "../lib" }
