[package]
name = "lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.64"
url = "2.2.2"
reqwest = { version = "0.11.4", features = ["blocking", "rustls-tls", "json"]}
anyhow = "1.0.42"
itertools = "0.10.1"