[package]
name = "cargo-issue-lib"
version = "0.1.4"
edition = "2018"
categories = ["development-tools", "development-tools::build-utils"]
keywords = ["issue", "issue-tracking", "github", "gitlab"]
readme  = "../README.md"
repository = "https://github.com/kaiserkarel/issue"
license-file = "../LICENSE"
description = "Tracks open issues during compile time and emits warnings if issues are closed"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.64"
url = "2.2.2"
reqwest = { version = "0.11.4", features = ["blocking", "rustls-tls", "json"]}
anyhow = "1.0.42"
itertools = "0.10.1"
