[package]
name = "issue-macros"
version = "0.1.1"
edition = "2018"
license-file = "../LICENSE"
description = "Procedural macro implementation for `issue`."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
syn = "1.0.73"
reqwest = { version = "0.11.4", features = ["blocking", "rustls-tls", "json"]}
serde = { version = "1", features = ["derive"]}
url = "2.2.2"
anyhow = "1.0.42"
proc-macro-error = { version = "1", default-features = false }
itertools = "0.10.1"