[package]
name = "issue-macros"
version = "0.1.1"
edition = "2018"
license-file = "../LICENSE"
description = "Procedural macro implementation for `issue`."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
syn = "1.0.73"
quote = "1.0.9"
serde = { version = "1", features = ["derive"]}
anyhow = "1.0.42"
proc-macro-error = { version = "1", default-features = false }
itertools = "0.10.1"
lib = { path = "../lib" }
lazy_static = "1.4.0"
serde_json = "1.0.64"
